# ESUI

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.claude/: settings.local.json
apps/api/: .dockerignore  Dockerfile  fly.toml  package.json  pyproject.toml  seed.py
apps/api/app/: main.py  models.py
apps/api/app/core/: auth.py  config.py  db.py  errors.py  log.py  redis.py
apps/api/app/ingest/: chunk.py  embed.py  parse.py
apps/api/app/integrations/: anthropic.py  gemini.py  perplexity.py  r2.py  removebg.py  resend.py  stability.py  unstructured.py  voyage.py
apps/api/app/jobs/: composite.py  scheduler.py  signals_curate.py  signals_refresh.py  together_scheduler.py  vault_jobs.py
apps/api/app/memory/: consolidate.py  engine.py  extract.py
apps/api/app/orchestrator/: auto_title.py  cost_cap.py  dispatcher.py  effort.py  exam_gen.py  intent.py  modes.py  planner.py  retrieval.py  router.py  streaming.py  tools.py
apps/api/app/realtime/: presence.py  server.py
apps/api/app/widgets/: auth.py  beauty.py  chat.py  exam.py  files.py  me.py  memory.py  signals.py  tasks.py  together.py  vault.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_init.py  0002_vault_links.py  0003_signal_drops.py  0004_simplify.py  0005_tasks.py  0006_signal_categories.py  0007_beauty_artifacts.py  0008_exam_summary_flashcards.py
apps/api/tests/: conftest.py  test_auth_logic.py  test_intent_classifier.py  test_rnn_scheduler.py  test_router.py  test_settings.py
docs/: 00-overview.md  01-data.md  02-api.md  03-ai.md  (+7 more)
(+53 files in other folders)
